Version 1.0 -> 100% except ide